--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
   </parent>
 
   <artifactId>deployed-on-column</artifactId>
-  <version>1.7-SNAPSHOT</version>
+  <version>1.7</version>
   <packaging>hpi</packaging>
 
   <name>Deployed On Column Plugin</name>
@@ -65,7 +65,7 @@
     <connection>scm:git:git://github.com/jenkinsci/deployed-on-column-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/deployed-on-column-plugin.git</developerConnection>
     <url>http://github.com/jenkinsci/deployed-on-column-plugin</url>
-    <tag>HEAD</tag>
+    <tag>deployed-on-column-1.7</tag>
   </scm>
 
   <properties>
