--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,7 @@
  ~ THE SOFTWARE.
  -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -34,7 +33,7 @@
   </parent>
 
   <artifactId>deployed-on-column</artifactId>
-  <version>1.9-SNAPSHOT</version>
+  <version>1.9</version>
   <packaging>hpi</packaging>
 
   <name>Deployed On Column Plugin</name>
@@ -62,7 +61,7 @@
     <connection>scm:git:git://github.com/jenkinsci/deployed-on-column-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/deployed-on-column-plugin.git</developerConnection>
     <url>http://github.com/jenkinsci/deployed-on-column-plugin</url>
-    <tag>HEAD</tag>
+    <tag>deployed-on-column-1.9</tag>
   </scm>
 
   <properties>
