--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
   </parent>
 
   <artifactId>deployed-on-column</artifactId>
-  <version>1.9</version>
+  <version>1.10-SNAPSHOT</version>
   <packaging>hpi</packaging>
 
   <name>Deployed On Column Plugin</name>
@@ -61,7 +61,7 @@
     <connection>scm:git:git://github.com/jenkinsci/deployed-on-column-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/deployed-on-column-plugin.git</developerConnection>
     <url>http://github.com/jenkinsci/deployed-on-column-plugin</url>
-    <tag>deployed-on-column-1.9</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
